# Zoee

./: README.md  docker-compose.yml  pyproject.toml
bot/: zoeebot.py  zoeecore.py
bot/cogs/: dev_tools.py  error_handler.py  meta.py
bot/libs/utils/: __init__.py  embeds.py  logger.py  views.py
bot/libs/utils/pages/: __init__.py  paginator.py  simple_pages.py  sources.py
envs/: dev.env
migrations/: 20231008_initial_up_rev1.sql
